[metadata]
# replace with your username:
name = beam-ds
version = attr: beam._version.__version__
author = Beam Maintainer
author_email = author@example.com
description = Beam Datascience package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mlutils/beamds
project_urls =
    Bug Tracker = https://github.com/mlutils/beamds/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires =
    loguru
    pandas
    tqdm
    urllib3
    requests
    joblib
    PyYAML
include_package_data = True

[options.entry_points]
jupyter.extensions =
    setup = beam.setup:load_ipython_extension

[options.extras_require]
ds =
    scipy
    torch
    tensorboard
    optuna
    tensorboardX
    ray[tune]
llm =
    langchain
    openai
    tiktoken
    transformers
    sentence_transformers

serve=
    websockets
    coolname
    waitress
    flask
    celery
    boto3
    openshift
    docker
    namegenerator
    logstash
    python-logstash
all =
    scipy
    torch
    tensorboard
    optuna
    tensorboardX
    ray[tune]
    langchain
    transformers
    openai
    accelerate
    tiktoken
    websockets
    coolname
    waitress
    flask
    celery
    faker
    pydantic
    sentence_transformers
    boto3
    polars
    kubernetes
    docker
    packaging
    psutil
    pynvml
    openshift
    namegenerator
    python-gitlab
    logstash
    python-logstash

orchestration =
    kubernetes
    docker
    packaging
    psutil
    pynvml
    openshift
    python-gitlab
    namegenerator
    logstash
    python-logstash

[options.packages.find]
include = beam*
exclude =
    tests*
    examples*
    notebooks*
    runs*